--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&display=swap');
 
 html {
-	width: 100vw;
+	width: 100%;
 	margin: 0 auto;
 	background: #778b48;
 	overflow-y: overlay;
