--- a/css/support-us.css
+++ b/css/support-us.css
@@ -195,7 +195,7 @@ p {
 	/* HIDDEN DISPLAY */
 	height: 0px;
 
-	width: 100vw;
+	width: 100%;
 	margin: 0 auto;
 	background: grey;
 	overflow-y: scroll;
